Create a grid with a 16x16 grid of square divs. Set up a “hover” effect so that the grid divs change color. Add a button on the top for the number of squares per side.

--- a/main.css
+++ b/main.css
@@ -86,11 +86,13 @@ label {
 
 /* ************************* */
 
+
 .container {
-    width: 800px;
-    height: 800px;
+    margin: 0 auto;
+    width: 802px;
+    height: 802px;
     display: flex;
     flex-wrap: wrap;
     align-items: start;
-    /* gap: 1px; */
+    border: 1px solid black;
 }
